--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
     </section>
 
     <footer>
-        <p>Contattami: <a href="mailto:giupion@example.com">giupion@example.com</a></p>
+        <p>Contattami: <a href="mailto:giupion@example.com">giuseppesansone144@gmail.com</a></p>
         <p>&copy; 2023 Giupion</p>
     </footer>
 </body>
