--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
     <section id="projects">
         <h2>Progetti GitHub</h2>
         <ul>
-            <li><a href="https://github.com/giupion/project1">Progetto 1</a> - Descrizione breve del progetto 1.</li>
-            <li><a href="https://github.com/giupion/project2">Progetto 2</a> - Descrizione breve del progetto 2.</li>
+            <li><a href="https://github.com/giupion/Capstone">Capstone</a> - Descrizione breve del progetto 1.</li>
+            <li><a href="https://github.com/giupion/pokeapireact">pokeApiReact</a> - Descrizione breve del progetto 2.</li>
             <li><a href="https://github.com/giupion/project3">Progetto 3</a> - Descrizione breve del progetto 3.</li>
         </ul>
     </section>
