--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <h2>Progetti GitHub</h2>
         <ul>
             <li><a href="https://github.com/giupion/Capstone">Capstone</a> - Descrizione breve del progetto 1.</li>
-            <li><a href="https://github.com/giupion/pokemorra">pokeApiReact</a> - Descrizione breve del progetto 2.</li>
+            <li><a href="https://github.com/giupion/pokemorra">pokemorra</a> - Descrizione breve del progetto 2.</li>
             <li><a href="https://github.com/giupion/project3">Progetto 3</a> - Descrizione breve del progetto 3.</li>
         </ul>
     </section>
