--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
     <section id="projects">
         <h2>Progetti GitHub</h2>
         <ul>
-            <li><a href="https://github.com/giupion/Capstone">Capstone</a> - Descrizione breve del progetto 1.</li>
-            <li><a href="https://github.com/giupion/pokemorra">pokemorra</a> - Descrizione breve del progetto 2.</li>
+            <li><a href="https://github.com/giupion/Capstone.github.io">Capstone</a> - Descrizione breve del progetto 1.</li>
+            <li><a href="https://github.com/giupion/pokemorra.github.io">pokemorra</a> - Descrizione breve del progetto 2.</li>
             <li><a href="https://github.com/giupion/project3">Progetto 3</a> - Descrizione breve del progetto 3.</li>
         </ul>
     </section>
 
     <footer>
-        <p>Contattami: <a href="mailto:giuseppesansone144@gmail.com">giupion@example.com</a></p>
+        <p>Contattami: <a href="mailto:giuseppesansone144@gmail.com">giuseppesansone144@gmail.com</a></p>
         <p>&copy; 2023 Giupion</p>
     </footer>
 </body>
