--- a/index.html
+++ b/index.html
@@ -24,9 +24,11 @@
     <section id="projects">
         <h2>Progetti GitHub</h2>
         <ul>
-            <li><a href="https://github.com/giupion/Capstone.github.io">Capstone</a> - Descrizione breve del progetto 1.</li>
-            <li><a href="https://github.com/giupion/pokemorra.github.io">pokemorra</a> - Descrizione breve del progetto 2.</li>
+            <li><a href="https://github.com/giupion/Capstone">Capstone</a> - Descrizione breve del progetto 1.</li>
+            <li><a href="https://github.com/giupion/pokemorra">pokemorra</a> - Descrizione breve del progetto 2.</li>
             <li><a href="https://github.com/giupion/project3">Progetto 3</a> - Descrizione breve del progetto 3.</li>
+            <li><a href="https://bebladimoradiposeidone.it/"></a> Un sito di un B&B</li>
+            <li><a href="https://github.com/giupion/Progetto-giorno-27.git"></a> Un sito di un B&B</li>
         </ul>
     </section>
 
