--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
             <li><a href="https://github.com/giupion/Capstone">Capstone</a> - Descrizione breve del progetto 1.</li>
             <li><a href="https://github.com/giupion/pokemorra">pokemorra</a> - Descrizione breve del progetto 2.</li>
             <li><a href="https://github.com/giupion/project3">Progetto 3</a> - Descrizione breve del progetto 3.</li>
-            <li><a href="https://bebladimoradiposeidone.it/"></a> Un sito di un B&B</li>
-            <li><a href="https://github.com/giupion/Progetto-giorno-27.git"></a> Un sito di un B&B</li>
+            <li><a href="https://bebladimoradiposeidone.it/">B&B</a> Un sito di un B&B</li>
+            <li><a href="https://github.com/giupion/Progetto-giorno-27.git">Progetto</a> Un sito di un B&B</li>
         </ul>
     </section>
 
