--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <li><a href="https://github.com/giupion/pokemorra">pokemorra</a> - Descrizione breve del progetto 2.</li>
             <li><a href="https://github.com/giupion/project3">Progetto 3</a> - Descrizione breve del progetto 3.</li>
             <li><a href="https://bebladimoradiposeidone.it/">B&B</a> Un sito di un B&B</li>
-            <li><a href="https://giupion.github.io/Progetto-giorno-27/">Epicode page for Mobile</a> Un sito di un B&B</li>
+            <li><a href="https://giupion.github.io/Progetto-giorno-27/" target="_blank">Epicode page for Mobile</a> Un sito di un B&B</li>
         </ul>
     </section>
 
