--- a/index.html
+++ b/index.html
@@ -24,16 +24,16 @@
     <section id="projects">
         <h2>Progetti GitHub</h2>
         <ul>
-            <li><a href="https://github.com/giupion/Capstone">Capstone</a> - Descrizione breve del progetto 1.</li>
-            <li><a href="https://github.com/giupion/pokemorra">pokemorra</a> - Descrizione breve del progetto 2.</li>
-            <li><a href="https://github.com/giupion/project3">Progetto 3</a> - Descrizione breve del progetto 3.</li>
-            <li><a href="https://bebladimoradiposeidone.it/">B&B</a> Un sito di un B&B</li>
-            <li><a href="https://giupion.github.io/Progetto-giorno-27/" target="_blank">Epicode page for Mobile</a> Un sito di un B&B</li>
+            <li><a href="https://github.com/giupion/Capstone" target="_blank">Capstone</a> - Descrizione breve del progetto 1.</li>
+            <li><a href="https://github.com/giupion/pokemorra" target="_blank">pokemorra</a> - Descrizione breve del progetto 2.</li>
+            <li><a href="https://github.com/giupion/project3" target="_blank">Progetto 3</a> - Descrizione breve del progetto 3.</li>
+            <li><a href="https://bebladimoradiposeidone.it/" target="_blank">B&B</a> - Un sito di un B&B.</li>
+            <li><a href="https://giupion.github.io/Progetto-giorno-27/" target="_blank">Epicode page for Mobile</a> - Un sito mobile.</li>
         </ul>
     </section>
 
     <footer>
-        <p>Contattami: <a href="mailto:giuseppesansone144@gmail.com">giuseppesansone144@gmail.com</a></p>
+        <p>Contattami: <a href="mailto:giuseppesansone144@gmail.com" target="_blank">giuseppesansone144@gmail.com</a></p>
         <p>&copy; 2023 Giupion</p>
     </footer>
 </body>
