--- a/about.html
+++ b/about.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <canvas id="matrixCanvas"></canvas>
+    
     <header>
         <h1>Chi Sono</h1>
         <nav>
@@ -24,5 +26,7 @@
         <p>Contattami: <a href="mailto:giuseppesansone144@gmail.com">giuseppesansone144@gmail.com</a></p>
         <p>&copy; 2023 Giupion</p>
     </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
