--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <canvas id="matrixCanvas"></canvas>
+    
     <header>
         <h1>Benvenuti nel Portfolio di Giuseppe Sansone</h1>
         <nav>
@@ -36,5 +38,7 @@
         <p>Contattami: <a href="mailto:giuseppesansone144@gmail.com" target="_blank">giuseppesansone144@gmail.com</a></p>
         <p>&copy; 2023 Giupion</p>
     </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
