--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <canvas id="matrixCanvas">
+    <canvas id="matrixCanvas"></canvas>
     
     <header>
         <h1>Chi Sono</h1>
@@ -26,7 +26,7 @@
         <p>Contattami: <a href="mailto:giuseppesansone144@gmail.com">giuseppesansone144@gmail.com</a></p>
         <p>&copy; 2023 Giupion</p>
     </footer>
-</canvas>
+
     <script src="script.js"></script>
 </body>
 </html>
