--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <canvas id="matrixCanvas">
+    <canvas id="matrixCanvas"></canvas>
     
     <header>
         <h1>Benvenuti nel Portfolio di Giuseppe Sansone</h1>
