--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </section>
 
     <footer>
-        <p>Contattami: <a href="mailto:giuseppesansone144@gmail.com" target="_blank">giuseppesansone144@gmail.com</a></p>
+        <p>Contattami: <a href="mailto:giuseppesansone144@gmail.com">giuseppesansone144@gmail.com</a></p>
         <p>&copy; 2023 Giupion</p>
     </footer>
 
