--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Portfolio di Giupion">
-    <title>Giuseppe Sansone Portfolio</title>
+    <title>Portfolio di Giupion</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
