--- a/about.html
+++ b/about.html
@@ -7,22 +7,30 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <h1>Chi Sono</h1>
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="about.html">About Me</a>
-        </nav>
-    </header>
+    <canvas id="matrixCanvas"></canvas>
     
-    <section>
-        <h2>Informazioni su di me</h2>
-        <p>Ciao, sono Giupion. Sono uno sviluppatore software con esperienza in vari linguaggi di programmazione, tra cui Python, JavaScript, e Swift. Amo lavorare su progetti open-source e contribuire alla comunità di sviluppo.</p>
-    </section>
+    <div class="content">
+        <header>
+            <h1>Chi Sono</h1>
+            <nav>
+                <a href="index.html">Home</a>
+                <a href="about.html">About Me</a>
+            </nav>
+        </header>
+        
+        <main>
+            <section id="about">
+                <h2>Informazioni su di me</h2>
+                <p>Ciao, sono Giupion. Sono uno sviluppatore software con esperienza in vari linguaggi di programmazione, tra cui Python, JavaScript, e Swift. Amo lavorare su progetti open-source e contribuire alla comunità di sviluppo.</p>
+            </section>
+        </main>
 
-    <footer>
-        <p>Contattami: <a href="mailto:giuseppesansone144@gmail.com">giuseppesansone144@gmail.com</a></p>
-        <p>&copy; 2023 Giupion</p>
-    </footer>
+        <footer>
+            <p>Contattami: <a href="mailto:giuseppesansone144@gmail.com">giuseppesansone144@gmail.com</a></p>
+            <p>&copy; 2023 Giupion</p>
+        </footer>
+    </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
