--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     
     <div class="content">
         <header>
-            <h1>Benvenuti nel Portfolio di Giuseppe Sansone</h1>
+            <h1>Portfolio di Giuseppe Sansone</h1>
             <nav>
                 <a href="index.html">Home</a>
                 <a href="about.html">About Me</a>
@@ -35,12 +35,12 @@
                 </ul>
             </section>
         </main>
-
-        <footer>
-            <p>Contattami: <a href="mailto:giuseppesansone144@gmail.com">giuseppesansone144@gmail.com</a></p>
-            <p>&copy; 2023 Giupion</p>
-        </footer>
     </div>
+
+    <footer>
+        <p>Contattami: <a href="mailto:giuseppesansone144@gmail.com">giuseppesansone144@gmail.com</a></p>
+        <p>&copy; 2023 Giupion</p>
+    </footer>
 
     <script src="script.js"></script>
 </body>
