--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio di Giupion</title>
+    <title>Portfolio di Giuseppe Sansone</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -13,28 +13,28 @@
             <h1>Portfolio di Giuseppe Sansone</h1>
             <nav>
                 <a href="index.html">Home</a>
-                <a href="about.html">About Me</a>
+                <a href="about.html">Chi sono</a>
             </nav>
         </header>
         <main>
             <section id="intro">
-                <h2>Ciao! Sono Giuseppe</h2>
-                <p>Sono uno sviluppatore appassionato che ama creare progetti e risolvere problemi attraverso il codice. Qui troverai alcuni dei miei progetti preferiti su GitHub.</p>
+                <h2>Benvenuto! Sono Giuseppe</h2>
+                <p>Sviluppatore appassionato, amo creare progetti e risolvere problemi attraverso il codice. Qui troverai alcuni dei miei progetti preferiti su GitHub.</p>
             </section>
             <section id="projects">
-                <h2>Progetti GitHub</h2>
+                <h2>I Miei Progetti</h2>
                 <ul>
-                    <li><a href="https://github.com/giupion/Capstone" target="_blank">Capstone</a> - Descrizione breve del progetto 1.</li>
-                    <li><a href="https://github.com/giupion/pokemorra" target="_blank">pokemorra</a> - Descrizione breve del progetto 2.</li>
-                    <li><a href="https://github.com/giupion/project3" target="_blank">Progetto 3</a> - Descrizione breve del progetto 3.</li>
-                    <li><a href="https://bebladimoradiposeidone.it/" target="_blank">B&B</a> - Un sito di un B&B.</li>
-                    <li><a href="https://giupion.github.io/Progetto-giorno-27/" target="_blank">Epicode page for Mobile</a> - Un sito mobile.</li>
+                    <li><a href="https://github.com/giupion/Capstone" target="_blank">Capstone</a> - Il mio progetto finale per Epicode.</li>
+                    <li><a href="https://github.com/giupion/pokemorra" target="_blank">Pokemorra</a> - Un gioco che unisce Pokémon e Morra cinese.</li>
+                    <li><a href="https://github.com/giupion/project3" target="_blank">Progetto 3</a> - Un'applicazione web innovativa.</li>
+                    <li><a href="https://bebladimoradiposeidone.it/" target="_blank">B&B La dimora di Poseidone</a> - Sito web per un B&B.</li>
+                    <li><a href="https://giupion.github.io/Progetto-giorno-27/" target="_blank">Epicode Mobile</a> - Progetto mobile-first per Epicode.</li>
                 </ul>
             </section>
         </main>
         <footer>
             <p>Contattami: <a href="mailto:giuseppesansone144@gmail.com">giuseppesansone144@gmail.com</a></p>
-            <p>&copy; 2023 Giupion</p>
+            <p>&copy; 2023 Giuseppe Sansone</p>
         </footer>
     </div>
     <script src="script.js"></script>
