--- a/about.html
+++ b/about.html
@@ -27,6 +27,6 @@
             <p>&copy; 2023 Giupion</p>
         </footer>
     </div>
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
 </body>
 </html>
