--- a/index.html
+++ b/index.html
@@ -37,6 +37,6 @@
             <p>&copy; 2023 Giuseppe Sansone</p>
         </footer>
     </div>
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
 </body>
 </html>
