--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <li><a href="https://github.com/giupion/Capstone" target="_blank">Capstone</a> - Il mio progetto finale per Epicode.</li>
                     <li><a href="https://github.com/giupion/pokemorra" target="_blank">Pokemorra</a> - Un gioco che unisce Pokémon e Morra cinese.</li>
                     <li><a href="https://github.com/giupion/react-redux-project.git" target="_blank">Spotify</a> - Un clone di spotify.</li>
-                    <li><a href="https://bebladimoradiposeidone.it/" target="_blank">B&B</a> - Sito web per un B&B.</li>
+                    <!--<li><a href="https://bebladimoradiposeidone.it/" target="_blank">B&B</a> - Sito web per un B&B.</li>-->
                     <li><a href="https://giupion.github.io/Progetto-giorno-27/" target="_blank">Epicode Mobile</a> - Progetto mobile-first per Epicode.</li>
                 </ul>
             </section>
