--- a/index.html
+++ b/index.html
@@ -24,20 +24,23 @@
             <section id="projects">
                 <h2>I Miei Progetti</h2>
                 <ul>
-                    
                     <li><a href="https://github.com/giupion/Capstone" target="_blank">Capstone</a> - Il mio progetto finale per Epicode.</li>
                     <li><a href="https://github.com/giupion/pokemorra" target="_blank">Pokemorra</a> - Un gioco che unisce Pokémon e Morra cinese.</li>
                     <li><a href="https://github.com/giupion/react-redux-project.git" target="_blank">Spotify</a> - Un clone di spotify.</li>
-                    <!--<li><a href="https://bebladimoradiposeidone.it/" target="_blank">B&B</a> - Sito web per un B&B.</li>-->
                     <li><a href="https://giupion.github.io/Progetto-giorno-27/" target="_blank">Epicode Mobile</a> - Progetto mobile-first per Epicode.</li>
                 </ul>
             </section>
         </main>
         <footer>
-            <p>Contattami: <a href="mailto:giuseppesansone144@gmail.com">giuseppesansone144@gmail.com</a></p>
+            <p>Contattami:</p>
+            <form action="mailto:giuseppesansone144@gmail.com" method="post" enctype="text/plain">
+                <input type="email" name="email" placeholder="La tua Email" required>
+                <input type="submit" value="Invia">
+            </form>
             <p>&copy; 2023 Giuseppe Sansone</p>
         </footer>
     </div>
     <script src="script.js" defer></script>
 </body>
 </html>
+
