--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
             <h1>Chi Sono</h1>
             <nav>
                 <a href="index.html">Home</a>
-                <a href="about.html">About Me</a>
+                <a href="about.html">Su di Me</a>
             </nav>
         </header>
         <main>
