--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
                 </p>
                 
                 <p>
-                    Ho avuto l'opportunità di lavorare in due importanti multinazionali nel settore logistico, dove ho sviluppato non solo le mie competenze tecniche, ma anche la capacità di lavorare efficacemente in team e in autonomia. Affronto le sfide con determinazione e mi piace risolvere problemi complessi.
+                    Ho avuto l'opportunità di lavorare in due importanti multinazionali nel settore logistico,tecnico e IT dove ho sviluppato non solo le mie competenze tecniche, ma anche la capacità di lavorare efficacemente in team e in autonomia. Affronto le sfide con determinazione e mi piace risolvere problemi complessi.
                 </p>
                 
                 <p>
