--- a/about.html
+++ b/about.html
@@ -45,7 +45,8 @@
             <p>Contattami:</p>
             <form action="mailto:giuseppesansone144@gmail.com" method="post" enctype="text/plain">
                 <input type="email" name="email" placeholder="La tua Email" required>
-                <input type="submit" value="Invia">
+                <textarea name="message" placeholder="Il tuo messaggio"></textarea>
+                <input type="submit" value="Invia" class="matrix-button">
             </form>
             <p>&copy; 2023 Giupion</p>
         </footer>
