--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
             <p>Contattami:</p>
             <form action="mailto:giuseppesansone144@gmail.com" method="post" enctype="text/plain">
                 <input type="email" name="email" placeholder="La tua Email" required>
-                <input type="submit" value="Invia">
+                <textarea name="message" placeholder="Il tuo messaggio"></textarea>
+                <input type="submit" value="Invia" class="matrix-button">
             </form>
             <p>&copy; 2023 Giuseppe Sansone</p>
         </footer>
