--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <form action="mailto:giuseppesansone144@gmail.com" method="post" enctype="text/plain">
                 <input type="email" name="email" placeholder="La tua Email" required>
                 <textarea name="message" placeholder="Il tuo messaggio"></textarea>
-                <input type="submit" value="Invia" class="matrix-button">
+                <input type="submit" value="Invia" id="matrix-button">
             </form>
             <p>&copy; 2023 Giuseppe Sansone</p>
         </footer>
