--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </nav>
         </header>
         <main>
-            <section id="intro" id="matrix-button">
+            <section id="intro">
                 <h2>Benvenuto! Sono Giuseppe</h2>
                 <p>Sviluppatore appassionato, amo creare progetti e risolvere problemi attraverso il codice. Qui troverai alcuni dei miei progetti preferiti su GitHub.</p>
             </section>
