--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </section>
         </main>
         <footer>
-            <p>Contattami:</p>
+            <p class="contact-title">Contattami:</p>
             <form action="mailto:giuseppesansone144@gmail.com" method="post" enctype="text/plain">
                 <input type="email" name="email" placeholder="La tua Email" required>
                 <textarea name="message" placeholder="Il tuo messaggio"></textarea>
