update pokemorra link

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <h2>I Miei Progetti</h2>
                 <ul>
                     <li><a href="https://github.com/giupion/Capstone" target="_blank">Capstone</a> - Il mio progetto finale per Epicode.</li>
-                    <li><a href="https://giupion.github.io/pokemorra" target="_blank">Pokemorra</a> - Un gioco che unisce Pokémon e Morra cinese.</li>
+                    <li><a href="https://giupion.github.io/pokemorra/" target="_blank">Pokemorra</a> - Un gioco che unisce Pokémon e Morra cinese.</li>
                     <li><a href="https://github.com/giupion/react-redux-project.git" target="_blank">Spotify</a> - Un clone di spotify.</li>
                     <li><a href="https://giupion.github.io/Progetto-giorno-27/" target="_blank">Epicode project</a> - Progetto mobile-first per Epicode.</li>
                     <li><a href="https://bebladimoradiposeidone.it">B&B in wordpress, creazione logo,plugin.</a> - Un sito di un B&B</li>
