--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
                     <li><a href="https://github.com/giupion/react-redux-project.git" target="_blank">Spotify</a> - Un clone di spotify.</li>
                     <li><a href="https://giupion.github.io/Progetto-giorno-27/" target="_blank">Epicode project</a> - Progetto mobile-first per Epicode.</li>
                     <li><a href="https://bebladimoradiposeidone.it">B&B in wordpress, creazione logo,plugin.</a> - Un sito di un B&B</li>
+                    <li><a href="https://giupion.github.io/aquatica-static/#/dashboard">Aquatica!</a> - Un sito vetrina di un cantiere navale!</li>
+                
                 </ul>
             </section>
         </main>
